# Nocturne

./: .gitignore  CMakeLists.txt  LICENSE  README.md  file_trns.sh
data/: coco_classes.txt
src/: capture.cpp  detect.cpp  display.cpp  image_functions.cl  nocturne.cpp  sensor.cpp  test.cpp  utils.cpp
src/headers/: capture.h  detect.h  display.h  font.h  nocturne.h  sensor.h  utils.h
